Bump up kotlin and gradle